# UnityPackageMaker

./: README.md  build_exe.bat  init_env.bat  main.py  pyproject.toml
src/unity_package_maker/: app.py  exporter.py
src/unity_package_maker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_app.py  test_exporter.py
