[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unity-package-maker"
version = "0.1.0"
description = "PyQt desktop tool for exporting Unity 2022 UPM packages"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyQt6>=6.7,<7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
